--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Likan",
   "description": "这是一个对 vscode 所缺少的功能补全的插件...",
   "publisher": "Likan",
-  "version": "0.9.10",
+  "version": "0.9.11",
   "author": {
     "name": "likan"
   },
@@ -36,6 +36,8 @@
     "onCommand:likan.refresh.script",
     "onCommand:likan.refresh.explorer",
     "onCommand:likan.open.specifyBrowser",
+    "onCommand:likan.other.deleteQuote",
+    "onCommand:likan.other.changeCase",
     "onView:likan-explorer",
     "onView:likan-scripts",
     "onView:likan.other.gitignore"
@@ -98,6 +100,16 @@
       {
         "command": "likan.other.gitignore",
         "title": "添加.gitignore",
+        "category": "likan"
+      },
+      {
+        "command": "likan.other.deleteQuote",
+        "title": "删除最近的括号对",
+        "category": "likan"
+      },
+      {
+        "command": "likan.other.changeCase",
+        "title": "修改单词格式",
         "category": "likan"
       }
     ],
