--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Likan",
   "description": "这是一个对 vscode 所缺少的功能补全的插件...",
   "publisher": "Likan",
-  "version": "0.9.12",
+  "version": "0.9.13",
   "author": {
     "name": "likan"
   },
@@ -209,7 +209,7 @@
         },
         {
           "command": "likan.other.deleteQuote",
-          "when": "false"
+          "when": "editorFocus && !editorReadonly"
         },
         {
           "command": "likan.other.changeCase",
