feat: 移除图标, 对脚本列表进行排序, 现在change case 中数字将被分为同一组

--- a/package.json
+++ b/package.json
@@ -252,7 +252,7 @@
         "likan.string.author": {
           "type": "string",
           "description": "插入注释时显示的Author字段值",
-          "default": "likan"
+          "default": ""
         },
         "likan.show.fileSize": {
           "type": "boolean",
