--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Likan",
   "description": "这是一个对 vscode 所缺少的功能补全的插件...",
   "publisher": "Likan",
-  "version": "0.9.20",
+  "version": "0.9.21",
   "author": {
     "name": "likan"
   },
@@ -112,7 +112,9 @@
           "id": "likan-explorer",
           "name": "Explorer",
           "contextualTitle": "资源视图",
-          "when": "config.likan.show.explorer"
+          "when": "config.likan.show.explorer",
+          "icon": "$(files)",
+          "type": "tree"
         }
       ]
     },
