--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "onCommand:likan.other.packageScript",
     "onCommand:likan.other.convertString",
     "onCommand:likan.other.scriptRunner",
+    "onCommand:likan.other.trimWhitespace",
     "onView:likan-explorer"
   ],
   "capabilities": {
@@ -52,13 +53,13 @@
         "title": "在默认浏览器打开",
         "icon": "$(globe)",
         "category": "likan",
-        "enablement": "resourceLangId in likan.htmlId || editorLangId in likan.htmlId || viewItem =~ /file-.*\\.html?$/"
+        "enablement": "resourceLangId in likan.htmlId || viewItem =~ /file-.*\\.html?$/"
       },
       {
         "command": "likan.open.specifyBrowser",
         "title": "在指定浏览器打开",
         "category": "likan",
-        "enablement": "resourceLangId in likan.htmlId || editorLangId in likan.htmlId || viewItem =~ /file-.*\\.html?$/"
+        "enablement": "resourceLangId in likan.htmlId || viewItem =~ /file-.*\\.html?$/"
       },
       {
         "command": "likan.open.currentWindow",
@@ -160,18 +161,18 @@
       "view/item/context": [
         {
           "command": "likan.open.defaultBrowser",
-          "group": "navigation@0",
+          "group": "navigation@3",
           "when": "viewItem =~ /file-.*\\.html?$/"
         },
         {
           "command": "likan.open.specifyBrowser",
-          "group": "navigation@1",
+          "group": "navigation@4",
           "when": "viewItem =~ /file-.*\\.html?$/"
         },
         {
           "command": "likan.open.newWindow",
           "group": "inline@1",
-          "when": "view == likan-explorer && viewItem =~ /^directory-/"
+          "when": "view == likan-explorer"
         },
         {
           "command": "likan.other.scriptRunner",
@@ -179,13 +180,23 @@
           "when": "view == likan-explorer && viewItem =~ /^directory-/"
         },
         {
+          "command": "likan.open.newWindow",
+          "group": "navigation@0",
+          "when": "view == likan-explorer"
+        },
+        {
           "command": "likan.open.currentWindow",
-          "group": "navigation@3",
-          "when": "view == likan-explorer && viewItem =~ /^directory-/"
+          "group": "navigation@1",
+          "when": "view == likan-explorer"
         },
         {
           "command": "likan.other.packageScript",
-          "group": "z_commands@2",
+          "group": "z_commands@1",
+          "when": "view == likan-explorer && viewItem =~ /(^directory-)|(^file-package\\.json$)/"
+        },
+        {
+          "command": "likan.other.scriptRunner",
+          "group": "z_commands@0",
           "when": "view == likan-explorer && viewItem =~ /^directory-/"
         }
       ],
